--- a/product-api/src/main/resources/application.yml
+++ b/product-api/src/main/resources/application.yml
@@ -16,11 +16,11 @@ spring:
     platform: postgresql
     maxActive: 3
 
-    jpa:
-      hibernate:
-        ddl-auto: create-drop
-        format_sql: true
+  jpa:
+    hibernate:
+      ddl-auto: create-drop #nao utilizar em prod
+      format_sql: true
       show_sql: true
-      properties:
-        hibernate:
-          dialect: org.hibernate.dialect.PostgreSQL9Dialect
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQL9Dialect
